--- a/hosts/exoplanet/exoplanet.yaml
+++ b/hosts/exoplanet/exoplanet.yaml
@@ -86,6 +86,45 @@ services:
       exoplanet-net:
 
 # ============================================================== #
+# ntfy: 
+# ============================================================== #
+
+  ntfy:
+    image: binwiederhier/ntfy:latest
+    container_name: ntfy
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 64M
+    command:
+      - serve
+    healthcheck: # optional: remember to adapt the host:port to your environment
+      test:
+        [
+          'CMD-SHELL',
+          "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1",
+        ]
+      interval: 60s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    environment:
+      - PUID=3000
+      - PGID=3000
+      - TZ=America/Denver
+    volumes:
+      - ./ntfy/cache:/var/cache/ntfy
+      - ./ntfy/data:/etc/ntfy
+    ports:
+      - 8000:80
+    networks:
+      exoplanet-net:
+
+# ============================================================== 
 
 networks:
   exoplanet-net:
