Add link to ntfy docs

--- a/hosts/exoplanet/exoplanet.yaml
+++ b/hosts/exoplanet/exoplanet.yaml
@@ -86,7 +86,7 @@ services:
       exoplanet-net:
 
 # ============================================================== #
-# ntfy: 
+# ntfy: https://docs.ntfy.sh/install/
 # ============================================================== #
 
   ntfy:
