Add incomplete downloads bind mount to qb

--- a/hosts/supercluster/supercluster-pia.yml
+++ b/hosts/supercluster/supercluster-pia.yml
@@ -133,6 +133,7 @@ services:
       - WEBUI_PORT=8080
       - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest # optional custom web ui. Must enable alternate web ui in qbittorrent options and point file location to /vuetorrent 
     volumes:
+      - ./qbittorrent/downloads:downloads-incomplete
       - ./qbittorrent/config:/config
       - ${TORRENTS_PATH}:/nebula-downloads/torrents:rw
       - ${TORRENTS_PATH}/mam.cookies:/mam.cookies # For MyAnonaMouse dynamic IP update
